--- a/youtube crud/.project
+++ b/youtube crud/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>youtube crud</name>
+	<name>youtube_crud</name>
 	<comment></comment>
 	<projects>
 	</projects>
